--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
-  "compilerOptions": {
-    "baseUrl": "."
+    "compilerOptions": {
+      "baseUrl": ".",
+      "paths": {
+        "@/elements/*": ["components/elements/*"]
+      }
+    }
   }
-}
